# rk_ws

./: package.xml  setup.cfg  setup.py
config/: controller.yaml  ros2_controllers.yaml  view.rviz
launch/: arm_ui.launch.py  bringup.launch.py  display.launch.py  gz.launch.py
meshes/: 1_base.STL  2_rotary_joint.STL  3_servo_motor.STL  4_lower_arm.STL  5_upper_arm.STL  6_wrist_support.STL  7_wrist.STL  _.STL
rk_demo/: arm_ui.py  fk_node.py  ik_node.py  slider_gui.py
rk_demo/rk_demo/: arm_ui.py
urdf/: robot_arm.urdf.xacro
