<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rk_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yildirimar25@gmail.com">arifey</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <exec_depend>visualization_msgs</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>